0032857: Error when finding the intersection between a new face made after a draft and the inner face of body

Intersection surface cone is calculated for the part of the cone that corresponds to the draft plane.